# unicy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: unicy.pc.in
examples/: .gitignore
examples/freecam/: CMakeLists.txt
examples/freecam/src/: main.cpp
include/unicy/: Color.hpp  Debug.hpp  EnvironmentError.hpp  GameObject.hpp  Mathf.hpp  Matrix.hpp  Matrix.inl  Matrix4x4.hpp  Quaternion.hpp  Scene.hpp  Transform.hpp  Vector2.hpp  Vector2Generic.hpp  Vector2Generic.inl  Vector2Int.hpp  Vector3.hpp  Vector3Generic.hpp  Vector3Generic.inl  Vector3Int.hpp  Window.hpp  has_insertion_operator.hpp  unicy.hpp
include/unicy/ui/: ImGui.hpp  Menu.hpp  Window.hpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Debug.cpp  Quaternion.cpp  Window.cpp
